k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders

spec:
  selector:
    app: orders

  type: ClusterIP

  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
