k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: orders
  labels:
    app: orders

spec:
  to:
    kind: Service
    name: orders

  port:
    targetPort: http
